[gd_scene load_steps=5 format=3 uid="uid://ccmix7665slo5"]

[ext_resource type="Script" path="res://Scenes/Enemies/burstEnemy/bullet_burst.gd" id="1_4d7o0"]
[ext_resource type="Texture2D" uid="uid://bsrjavdapdfx7" path="res://Assets/Images/Tiles/tile_0003.png" id="1_hcxtm"]
[ext_resource type="Script" path="res://Scenes/Enemies/Hitbox.gd" id="3_b44ir"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jq0y6"]
radius = 8.0
height = 16.0

[node name="BulletBurst" type="Node2D"]
script = ExtResource("1_4d7o0")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5708
texture = ExtResource("1_hcxtm")

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0
monitoring = false
script = ExtResource("3_b44ir")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CapsuleShape2D_jq0y6")

[node name="HitDetector" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitDetector"]
shape = SubResource("CapsuleShape2D_jq0y6")

[node name="Lifetime" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="area_entered" from="HitDetector" to="." method="_on_hit_detector_area_entered"]
[connection signal="timeout" from="Lifetime" to="." method="_on_lifetime_timeout"]
